--- a/stylex.css
+++ b/stylex.css
@@ -146,9 +146,7 @@
     font-weight: '400';
     color: white;
     margin-top: 1em;
-    
     text-align: center;
-
   }
 
   .underneath {
@@ -194,6 +192,22 @@
     font-family: 'KoHo', sans-serif;
   }
 
+#zoominfo {
+    color: rgb(58, 58, 58) !important;
+    font-size: medium;
+    margin-top: .5em;
+}
+
+#beg, #zoomdesc{
+margin-top: 1.25em;
+}
+
+#info {
+      color: rgb(58, 58, 58) !important;
+      font-size: medium;
+      margin-top: 1em
+  }
+  
     /*------------buttons------------*/
 
   .btn {
@@ -215,21 +229,17 @@
 
   #eventsbtn {
       margin-bottom: .75em;
+      margin-top: .5em !important;
   }
 
-  #info {
-      color: rgb(58, 58, 58) !important;
-      font-size: medium;
+
+  #contactmebtn {
+    margin-top: 0 !important;
   }
   
-  #zoominfo {
-    color: rgb(58, 58, 58) !important;
-    font-size: medium;
-    margin-top: .5em;
-}
+  
 
-
-  /*------------icons------------*/
+/*------------icons------------*/
 
   .icon {
     display: block;
@@ -238,6 +248,95 @@
     overflow-x: hidden;
     margin-top: 45px;
   }
+
+  /*--------events--------*/
+#events {
+  background-color: #609491;
+  overflow-x: hidden;
+}
+
+.carousel-caption {
+  font-family: 'KoHo', sans-serif;
+  font-size: large;
+  position: relative;
+  left: 0;
+  top: 0;
+}
+
+.cartext {
+  font-family: 'KoHo', sans-serif;
+  font-size: large;
+  color: white;
+  margin-top: .5em;
+}
+.peopleCarouselImg img {
+  width: auto;
+  height: 500px;
+  max-height: 500px;
+  margin-top: 1em;
+}
+
+#carouselExampleCaptions {
+  margin-bottom: 5.5em !important;
+}
+
+/*--------taichi--------*/
+
+#tai {
+  background-image: url("images/taichi2964hi5.jpg");
+  min-height: 100%;
+  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh;
+  /* These two lines are counted as one :-)       */
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  padding-top: 0;
+  padding-bottom: 150px;
+}
+
+#jumbotitle2 {
+  font-family: 'Kodchasan', sans-serif;
+  color: white;
+  margin-bottom: 20%;
+  margin-top: 1.25em;
+}
+
+#jumbowords {
+  font-family: 'KoHo', sans-serif;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.322);
+  margin-right: 60%;
+}
+
+#jumbotitle3 {
+  font-family: 'Kodchasan', sans-serif;
+  color: black;
+  margin-bottom: 13%;
+  margin-top: 1em;
+}
+
+.jumbowords2 {
+  font-family: 'KoHo', sans-serif;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.322);
+  margin-left: 60%;
+}
+
+/*------------jumbotron------------*/
+
+#rei {
+  background-image: url("images/reiki-2.jpg");
+  min-height: 100%;
+  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh;
+  /* These two lines are counted as one :-)       */
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  padding-top: 0;
+  padding-bottom: 220px;
+}
   
 
 /*------------media queries------------*/
@@ -330,6 +429,7 @@
 
   .servicetext {
     font-family: 'KoHo', sans-serif;
+    font-size: small;
   }
 
   #reikidesc {
@@ -357,11 +457,58 @@
   .privserv {
     font-family: 'KoHo', sans-serif;
     font-weight: 500;
-    font-size: large;
+    font-size: medium;
   }
 
   .text-center {
     font-family: 'KoHo', sans-serif;
+  }
+
+  .park {
+    margin-top: 2em;
+  }
+
+  .priv {
+  margin-top: .5em
+  }
+
+  #eventsbtn {
+    margin-top: 1em;
+  }
+
+  
+  #beg, #zoomdesc{
+    margin-bottom: 1.5em;
+margin-top: 1em;
+  }
+
+  .yt {
+    width: 100%;
+    height: 280px
+  }
+
+  #ytxt {
+    margin-top: 1em;
+    text-align: left !important;
+  }
+
+
+  /*------------buttons------------*/
+  
+  #longbtn {
+    margin-top: 1.5em;
+  }
+
+  #fblive {
+    margin-top: 1em;
+  }
+
+  .btn, .btn-group {
+    width:100%;
+}
+
+#contactmebtn, #zoombtn {
+    margin-top: 1em;
   }
 
   /*------------icons------------*/
@@ -371,7 +518,7 @@
     margin-left: auto;
     margin-right: auto;
     overflow-x: hidden;
-    margin-top: 22.5px;
+    margin-top: 45px;
   }
 
 
