--- a/stylex.css
+++ b/stylex.css
@@ -22,6 +22,10 @@
     font-family: 'Kodchasan', sans-serif;
 }
 
+#navlogo {
+  height: 60px;
+}
+
 /*------------About------------*/
 
 .jumbotron {
@@ -277,7 +281,7 @@ margin-top: 1.25em;
 }
 
 #carouselExampleCaptions {
-  margin-bottom: 5.5em !important;
+  margin-bottom: 5em !important;
 }
 
 /*--------taichi--------*/
@@ -309,6 +313,8 @@ margin-top: 1.25em;
   margin-right: 60%;
 }
 
+/*------------reiki------------*/
+
 #jumbotitle3 {
   font-family: 'Kodchasan', sans-serif;
   color: black;
@@ -337,12 +343,55 @@ margin-top: 1.25em;
   padding-top: 0;
   padding-bottom: 220px;
 }
+
+/*------------contact------------*/
+
+#contact {
+  background-color: #609491;
+  overflow-x: hidden;
+}
+
+.contactp {
+  font-family: 'KoHo', sans-serif;
+  font-size: large;
+  color: white;
+  margin-bottom: 2em;
+  margin-top: 1em;
+}
+
+#angieinfo {
+  font-size: larger;
+    font-weight: bold;
+}
+
+
+/*------------footer------------*/
+.footer {
+  background-color: #CFBBAD
+}
+
+.footeric {
+  height: 60px;
+  margin: 5px;
+  margin-bottom: .5em;
+}
+
+#footer {
+  padding: 2%;
+}
+
+
   
 
 /*------------media queries------------*/
 
 @media only screen and (max-width: 768px) {
     /* For cellphone: */
+
+    #navlogo {
+      height: 45px;
+    }
+    
 
     /*------------jumbotron------------*/
     .jumbotron {
@@ -521,5 +570,106 @@ margin-top: 1em;
     margin-top: 45px;
   }
 
+   /*------------events------------*/
 
+  #carouselExampleCaptions {
+    margin-bottom: 9em !important;
+  }
+
+  /*------------taichi------------*/
+
+  #tai {
+    background-image: url("images/taichi2964hi2-1.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-bottom: 0;
+      overflow: hidden;
+      background-position: center;
+      padding: 0;
+  }
+
+  #jumbowords {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.322);
+    font-size: smaller;
+    margin-right: 0;
+    margin-top: 55%
+  }
+
+  #jumbotitle2 {
+    font-family: 'Kodchasan', sans-serif;
+    color: white;
+    margin-bottom: 20%;
+    margin-top: 2em;
+    text-align: center;
+  }
+
+  /*------------reiki------------*/
+
+  #rei {
+    background-image: url("images/reiki-sensations-hands.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-bottom: 0;
+      overflow: hidden;
+      background-position: center;
+      padding: 0;
+  }
+
+  #jumbotitle3 {
+    font-family: 'Kodchasan', sans-serif;
+    color: black;
+    margin-bottom: 3em;
+    margin-top: 0;
+    text-align: center;
+  }
+  
+  .jumbowords2 {
+    font-family: 'KoHo', sans-serif;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.322);
+    margin: 0;
+    margin-bottom: 3em;
+    font-size: smaller;
+  }
+
+  #reikicont {
+    margin-top: 0;
+  }
+  
+  /*------------contact------------*/
+
+  .contactp {
+    font-family: 'KoHo', sans-serif;
+    font-size: large;
+    color: white;
+    margin-bottom: 2em;
+    margin-top: 1em;
+    font-size: medium;
+  }
+
+  #contactsub {
+font-size: larger;
+  }
+
+  #angieinfo {
+    margin-bottom: .2em !important;
+  }
+
+    /*------------footer------------*/
+
+    #footerlogo {
+      margin-bottom: 1em;
+    }
+
+
+    .footeric {
+      height: 50px;
+      margin: 9px;
+     margin-bottom: 19px;
+    }
+
+    #footericons {
+      text-align: center !important; 
+    }
 }
