--- a/stylex.css
+++ b/stylex.css
@@ -336,6 +336,7 @@ margin-top: 1.25em;
   color: white;
   background-color: rgba(0, 0, 0, 0.322);
   margin-left: 60%;
+  padding: 7px
 }
 
 /*------------jumbotron------------*/
